# backend/internal/api/oas_response_decoders_gen.go
@@ -1642,6 +1642,47 @@ func decodeGetOrganizationProfileResponse(resp *http.Response) (res GetOrganizat
 	return res, validate.UnexpectedStatusCodeWithResponse(resp)
 }
 
+func decodeGetSupportChatResponse(resp *http.Response) (res *SupportChatResponse, _ error) {
+	switch resp.StatusCode {
+	case 200:
+		// Code 200.
+		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
+		if err != nil {
+			return res, errors.Wrap(err, "parse media type")
+		}
+		switch {
+		case ct == "application/json":
+			buf, err := io.ReadAll(resp.Body)
+			if err != nil {
+				return res, err
+			}
+			d := jx.DecodeBytes(buf)
+
+			var response SupportChatResponse
+			if err := func() error {
+				if err := response.Decode(d); err != nil {
+					return err
+				}
+				if err := d.Skip(); err != io.EOF {
+					return errors.New("unexpected trailing data")
+				}
+				return nil
+			}(); err != nil {
+				err = &ogenerrors.DecodeBodyError{
+					ContentType: ct,
+					Body:        buf,
+					Err:         err,
+				}
+				return res, err
+			}
+			return &response, nil
+		default:
+			return res, validate.InvalidContentType(ct)
+		}
+	}
+	return res, validate.UnexpectedStatusCodeWithResponse(resp)
+}
+
 func decodeListInvitationsResponse(resp *http.Response) (res ListInvitationsRes, _ error) {
 	switch resp.StatusCode {
 	case 200:
